# rdcz-client

./: .gitignore  Makefile  README.md  description.txt  pyproject.toml  requirements.txt  run.sh  setup.py
mzk_digitization_registry/: __init__.py  __main__.py  client.py  datatypes.py  record.py  tests.py
rdcz/: __init__.py  client.py  custom_types.py  definitions.py  schemas.py
rdcz_client/: __main__.py  client.py  custom_types.py  record.py
tests/: test_client.py
