[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "rdcz_client"
version = "0.0.1"
authors = [
    {name = "Robert Randiak", email = "randiak@protonmail.com"}
]
requires-python = ">=3.12"
dynamic = ["dependencies", "description", "readme"]

[tool.setuptools]
packages = ["rdcz_client"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
description = {file = "description.txt"}
readme = {file = "README.md"}
