[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "rdcz"
version = "0.1.0"
authors = [
    {name = "Robert Randiak", email = "randiak@protonmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "requests",
    "solrify @ git+https://github.com/moravianlibrary/solrify.git"
]
dynamic = ["description", "readme"]

[tool.setuptools]
packages = ["rdcz"]

[tool.setuptools.dynamic]
description = {file = "description.txt"}
readme = {file = "README.md"}
